# ai-defense-platform

./: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  Vision.md  commitlint.config.cjs  nx.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
apps/api/: Dockerfile  eslint.config.mjs  package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/scripts/: generate-openapi.ts
apps/api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/api/src/audit/: audit.module.ts  audit.repository.ts  audit.service.spec.ts  audit.service.ts  audit.types.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  auth.types.ts  jwt-expiry.util.ts  jwt.strategy.ts
apps/api/src/datasets/: dataset.types.ts  datasets.controller.ts  datasets.module.ts  datasets.repository.ts  datasets.service.spec.ts  datasets.service.ts  split.util.spec.ts  split.util.ts
apps/api/src/detections/: detection.types.ts  detections-consumer.service.ts  detections.handler.spec.ts  detections.handler.ts  detections.module.ts  detections.repository.ts  detections.service.ts
apps/api/src/edge/: edge-device.types.ts  edge-devices.controller.ts  edge-devices.repository.ts  edge-devices.service.spec.ts  edge-devices.service.ts  (+5 more)
apps/api/src/edge-auth/: current-device.decorator.ts  device-auth.guard.spec.ts  device-auth.guard.ts  device-auth.types.ts  edge-auth.module.ts  jwt-or-device-auth.guard.ts
apps/api/test/: app.e2e-spec.ts  kafka-event-platform.e2e-spec.ts  mission-lifecycle.e2e-spec.ts
apps/edge-agent/: README.md  package.json
apps/edge-agent/src/: config.ts  event-buffer.test.ts  event-buffer.ts  health-http-server.ts  health-reporter.test.ts  health-reporter.ts  main.ts  model-resolver.test.ts  model-resolver.ts  python-sidecar.test.ts  python-sidecar.ts  sync-client.test.ts  sync-client.ts
apps/outbox-publisher/: Dockerfile  README.md  package.json  tsconfig.json
apps/outbox-publisher/src/: config.ts  db.ts  envelope-builder.ts  kafka.ts  main.ts  outbox-poller.test.ts  outbox-poller.ts  outbox-row.ts
apps/vision-service/: Dockerfile  README.md  pyproject.toml
apps/vision-service/scripts/: generate_samples.py  run_training.py
apps/vision-service/src/vision_service/: __init__.py  main.py  observability.py  settings.py
apps/vision-service/src/vision_service/annotation/: __init__.py  draw.py
apps/vision-service/src/vision_service/detection/: __init__.py  adapter.py  classes.py  factory.py  filters.py  onnx_detector.py  pipeline.py  tracker.py
apps/vision-service/src/vision_service/edge/: __init__.py  sidecar.py
apps/vision-service/src/vision_service/events/: __init__.py  envelope.py  payloads.py  topics.py
apps/vision-service/src/vision_service/frames/: __init__.py  models.py  preprocessing.py
apps/vision-service/src/vision_service/kafka/: __init__.py  commands_consumer.py  dead_letter.py  idempotency.py  retry.py  runner.py
apps/vision-service/src/vision_service/metadata/: __init__.py  extract.py
apps/vision-service/src/vision_service/routes/: health.py
apps/vision-service/src/vision_service/storage/: __init__.py  minio_client.py
apps/vision-service/src/vision_service/training/: _ultralytics_trainer.py  coco.py  evaluate.py  registry_client.py  train.py
apps/vision-service/src/vision_service/video/: __init__.py  image_reader.py  reader.py
apps/vision-service/tests/: test_annotation.py  test_commands_consumer.py  test_detection_factory.py  test_detection_filters.py  test_detection_onnx_detector.py  test_detection_pipeline.py  test_detection_tracker.py  test_edge_sidecar.py  test_event_schema_sync.py  test_frames_models.py  test_health.py  test_idempotency.py  test_image_reader.py  test_metadata.py  test_minio_client.py  test_preprocessing.py  test_ready_dependencies.py  test_retry.py  test_training_coco.py  test_training_evaluate.py  test_training_registry_client.py  test_training_train_pipeline.py  test_video_reader.py
apps/web/: .gitignore  Dockerfile  eslint.config.js  index.html  package.json  playwright.config.ts  server.js  tsconfig.app.json  vite.config.ts
apps/web/e2e/: mission-workflow.spec.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
datasets/: README.md
docs/: CONTRIBUTING.md  MOC.md
docs/.obsidian/: graph.json  workspace.json
docs/adr/: ADR-000-template.md  ADR-001-monorepo-tooling.md  ADR-002-python-dependency-manager.md  ADR-003-kafka-distribution-local-compose.md  ADR-004-nestjs-orm.md  ADR-005-event-schema-versioning.md  ADR-006-detection-model-and-tracker.md  ADR-007-map-library-choice.md  ADR-008-experiment-tracking-and-dataset-versioning.md  ADR-009-annotation-format.md  ADR-010-edge-runtime-language-and-inference-strategy.md  ADR-011-device-identity-and-sync-transport.md
docs/ai/: Detection_And_Tracking.md
docs/architecture/: Architecture_Overview.md  Coding_Standards.md  Initial_Risk_Register.md  Mission_Lifecycle.md  Mission_State_Machine.md  Quality_Attributes.md  Repository_Structure.md
docs/backend/: API_Shell.md
docs/decisions/: Technology_Decisions.md
docs/devops/: Local_Development_Stack.md
docs/edge/: Edge_Runtime.md
docs/frontend/: Web_Shell.md
docs/kafka/: Local_Kafka_Redpanda.md
docs/mvp-plan/: MVP_Implementation_Plan.md  PRD-Phase-1.md  PRD-Phase-10.md  PRD-Phase-2.md  PRD-Phase-3.md  PRD-Phase-4.md  PRD-Phase-5.md  PRD-Phase-6.md  PRD-Phase-7.md  PRD-Phase-8.md  PRD-Phase-9.md
docs/observability/: Observability_Baseline.md
docs/python/: Vision_Service_Shell.md
docs/roadmap/: AI_Defense_Platform_Roadmap.md  Progress.md  Sprint_0_Foundation.md
docs/security/: Security_Baseline.md
docs/testing/: Phase1_Testing_Baseline.md
docs/vision/: Goals.md  Guiding_Principles.md
infrastructure/compose/: docker-compose.yml
infrastructure/kafka/: create-topics.sh  topics.json
infrastructure/postgres/init/: 001-enable-postgis.sql
models/: README.md
samples/: README.md
(+135 files in other folders)
