[project]
name = "vision-service"
version = "0.1.0"
description = "Python + FastAPI vision worker shell. Phase 1 scaffold; OpenCV/YOLO/ONNX Runtime pipeline lands in Phases 4-5."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "aiokafka>=0.11.0",
  "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Event envelope/payload models deliberately use camelCase field names
# (eventId, missionId, ...) so they share one vocabulary with the JSON
# Schema and TS types they mirror — docs/adr/ADR-005-event-schema-versioning.md
# and vision_service/events/envelope.py's module docstring explain why.
# N815 (mixedCase class attribute) would otherwise flag every field.
# UP046/UP047 (PEP 695 type-parameter syntax) are ignored here on
# purpose: explicit TypeVar/Generic is pydantic's own documented style
# for generic models and (unlike PEP 695) still parses on Python <3.12,
# which matters while this sandbox can only verify pytest against the
# system Python (see docs/roadmap/Progress.md's Known gaps).
# UP017 (datetime.UTC alias, 3.11+) ignored for the same reason.
"src/vision_service/events/*.py" = ["N815", "UP046", "UP047", "UP017"]
# Same UP017 rationale as above — these two also use timezone.utc for
# 3.10 compatibility while this sandbox can only verify pytest against
# the system Python.
"src/vision_service/kafka/dead_letter.py" = ["UP017"]
"src/vision_service/observability.py" = ["UP017"]

[tool.coverage.run]
source = ["src/vision_service"]
