[project]
name = "vision-service"
version = "0.1.0"
description = "Python + FastAPI vision worker shell. Phase 1 scaffold; OpenCV/YOLO/ONNX Runtime pipeline lands in Phases 4-5."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "aiokafka>=0.11.0",
  "asyncpg>=0.30.0",
  # Phase 4 (docs/mvp-plan/PRD-Phase-4.md): OpenCV video/image I/O,
  # NumPy array types, and a direct MinIO/S3 client for REQ-4.10's
  # video download. opencv-python-headless (not opencv-python) since
  # this service is a headless worker with no GUI/display dependency.
  "opencv-python-headless>=4.10.0",
  "numpy>=2.0.0",
  "boto3>=1.35.0",
  # Phase 5 (docs/mvp-plan/PRD-Phase-5.md, docs/adr/ADR-006-detection-model-and-tracker.md):
  # CPU-only ONNX Runtime inference behind the detector adapter. No
  # tracker-specific dependency — the in-house tracker
  # (detection/tracker.py) is dependency-free by design (ADR-006).
  "onnxruntime>=1.19.0",
  # Phase 8 (docs/mvp-plan/PRD-Phase-8.md REQ-8.7/8.9/8.10,
  # docs/adr/ADR-008-experiment-tracking-and-dataset-versioning.md):
  # `training/registry_client.py`'s HTTP client against apps/api's
  # dataset/training-run/model-registry endpoints, and
  # `detection/factory.py`'s production-model resolution. Promoted from
  # dev-only (it was already here for FastAPI's own test client) to a
  # runtime dependency.
  "httpx>=0.28.1",
  # Phase 8 (REQ-8.6): YOLO training + ONNX export. Deliberately not
  # exercised end-to-end in this sandbox — `ultralytics` pulls in
  # `torch`, a multi-hundred-MB dependency this sandbox's network
  # restrictions (see docs/roadmap/Progress.md's recurring Known gaps)
  # make unreliable to install and verify here, the same class of risk
  # docs/adr/ADR-006-detection-model-and-tracker.md already flagged for
  # ByteTrack/BoT-SORT. `training/train.py` isolates every `ultralytics`
  # import inside the one function that needs it
  # (`_default_trainer`), so every other Phase 8 module (coco.py,
  # evaluate.py, registry_client.py) and their tests import and run
  # cleanly without `ultralytics` ever being installed.
  "ultralytics>=8.3.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Event envelope/payload models deliberately use camelCase field names
# (eventId, missionId, ...) so they share one vocabulary with the JSON
# Schema and TS types they mirror — docs/adr/ADR-005-event-schema-versioning.md
# and vision_service/events/envelope.py's module docstring explain why.
# N815 (mixedCase class attribute) would otherwise flag every field.
# UP046/UP047 (PEP 695 type-parameter syntax) are ignored here on
# purpose: explicit TypeVar/Generic is pydantic's own documented style
# for generic models and (unlike PEP 695) still parses on Python <3.12,
# which matters while this sandbox can only verify pytest against the
# system Python (see docs/roadmap/Progress.md's Known gaps).
# UP017 (datetime.UTC alias, 3.11+) ignored for the same reason.
"src/vision_service/events/*.py" = ["N815", "UP046", "UP047", "UP017"]
# Same UP017 rationale as above — these two also use timezone.utc for
# 3.10 compatibility while this sandbox can only verify pytest against
# the system Python.
"src/vision_service/kafka/dead_letter.py" = ["UP017"]
"src/vision_service/observability.py" = ["UP017"]
# Phase 4 (PRD-Phase-4.md REQ-4.9/4.6): Frame/Detection/VideoMetadata
# fields are deliberately camelCase for the same reason as
# events/*.py above — these models are expected to become the
# Pydantic side of a JSON-Schema-backed wire contract once Phase 5
# wires aidefense.detections up for real, so they start from that
# vocabulary now.
"src/vision_service/frames/models.py" = ["N815"]
"src/vision_service/metadata/extract.py" = ["N815"]
# Phase 8: same UP017 rationale as above — `datetime.UTC` (3.11+) would
# break at runtime on this sandbox's system Python 3.10; `timezone.utc`
# is the deliberate, portable choice, not an oversight.
"scripts/run_training.py" = ["UP017"]

[tool.coverage.run]
source = ["src/vision_service"]
